--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,29 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <h2>Welcome to Barcode Scanner !</h2>
+
+  <button ion-button (click)="scan()">Scan</button>
+
+  <ion-list>
+    <ion-item>
+
+      <h1>cancelled :  {{data.cancelled}}</h1>
+      <h1>format : {{data.format}}</h1>
+      <h1>text : {{data.text}}</h1>
+
+
+    </ion-item>
+
+    <ion-item>
+
+ <ion-input type="text" [(ngModel)]="encodemyData"></ion-input>
+ </ion-item>
+          <ion-item>
+            <button ion-button (click)="encodeData()">Scan</button>
+  </ion-item>
+  </ion-list>
+
+
+
 </ion-content>
